# cuda-flux

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Readme.md
inc/: cudaFluxPasses.h
lib/: deviceRuntime.cu  fluxDevicePass.cpp  fluxHostPass.cpp  hostRuntime.cpp  registerPasses.cpp
mekong-utils/: CMakeLists.txt
mekong-utils/inc/: BasicBlockEnumerator.h  DeviceUtils.h  HostUtils.h  IRUtils.h  Mekong-Utils.h  PTXFunction.h  ptx_parser.hre  x65599.h
mekong-utils/src/: BasicBlockEnumerator.cpp  DeviceUtils.cpp  HostUtils.cpp  IRUtils.cpp
mekong-utils/test/: hash_test.cpp  makefile  ptx_parser.cpp
mekong-utils/test/ptx_samples/: NeuralNet.cu_391e4d3d.ptx  S3D.cu_4da52f86.ptx  ex_particle_CUDA_float_seq.cu_73c51366.ptx  kernel_gpu_cuda_wrapper.cu_1affbc50.ptx  main.cu_1687f80a.ptx  main.cu_56ced65f.ptx  main.cu_74ea0659.ptx  module.ptx
test/: branchdivergence.cu  check_branch_div.py  gpu_check_wrapper.sh  runtime_test.sh  saxpy.cu
test/regression_test_ir/: hotspot.cu_d5d2a34f.out  nn_cuda.cu_98dc2873.out  rodinia_hotspot_hostcode.bc  rodinia_nn_hostcode.bc
utils/: modulefile
